--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -47,7 +47,7 @@ html,body {
 }
 
 .opening h1 {
-	font-size: 15vh;
+	font-size: 800%;
 	font-weight: bold;
 }
 
@@ -133,6 +133,11 @@ html,body {
 .carousel-inner {
 	background-size: 100%;
 	max-height: 100%;
+}
+
+.carousel-inner img {
+	width:75%;
+	height:auto;
 }
 
 #albums .cover img{
