--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -1,15 +1,15 @@
 html,body {
 	height: 100%;
 	width: 100%;
-	font-family: 'Flamenco', cursive;
+	font-family: 'Raleway', sans-serif;
 }
 
 h1,h2,h3 {
-	font-family: 'Asap', sans-serif;
+	font-family: 'Quicksand', sans-serif;
 }
 
 p {
-	font-family: 'Flamenco', cursive;
+	font-family: 'Raleway', sans-serif;
 }
 
 .center-block {
@@ -98,28 +98,35 @@ p {
 }
 
 /* Experience Page */
-#work .container-fluid .row {
+#work .row {
 	padding-bottom: 3em;
 }
 
-#work .container-fluid .row p {
-	font-family: Arial, Helvetica, Sans-Serif;
+#work .row p {
 	font-size: 1.5em;
 	padding: 2em;
 	margin-top: -1em;
 }
 
-#projects .container-fluid .row {
+#work #w1 {
+	padding-top: 25%;
+}
+
+#projects .row {
 	padding-bottom: 3em;
 }
 
-#projects .container-fluid #photo {
-	width: 85%;
-	height: 85%;
+#projects #p1 {
+	padding-top: 5%;
 }
 
-#projects .container-fluid .row p {
-	font-family: Arial, Helvetica, Sans-Serif;
+#projects #p2 {
+	width: 85%;
+	height: 85%;
+	padding-top: 8%;
+}
+
+#projects .row p {
 	font-size: 1.5em;
 	padding: 2em;
 	margin-top: -1em;
